# tsbb15-object-tracking-project

./: .gitignore  CMakeLists.txt  README.md
Evaluation/: 02.csv  04.csv  09.csv  Rest_InChair.csv  Walk1.csv
ground_truths/: xml_parser.py
ground_truths/Evaluation/: CMakeLists.txt  main.cpp
ground_truths/Evaluation/src/: main.cpp
ground_truths/Good detections from sequences/: LeftBox.csv  Meet_Crowd.csv
ground_truths/GroundTruths_csv/: Meet_Crowd_GT.csv  left_box.csv  rest_in_chair.csv  walk1.csv
ground_truths/GroundTruths_xml/: Meet_Crowd_GT.xml  left_box.xml  rest_in_chair.xml  wk1gt.xml
ground_truths/Results/: Left_Box_result.txt  Meet_Crowd_result.txt  Rest_InChair_NoOcclusion.txt  Rest_InChair_result.txt  Walk1_result.txt
include/: BackgroundModelling.hpp  ExternalCode.hpp  Old_Functions.hpp  Tracking.hpp  Utilities.hpp
src/: BackgroundModelling.cpp  CMakeLists.txt  ExternalCode.cpp  Old_Functions.cpp  Tracking.cpp  Utilities.cpp  main.cpp
