cmake_minimum_required(VERSION 2.8)
project( OpenCV_Project )
set("OpenCV_DIR" "/Users/ylvaselling/Documents/TSBB15\ Computer\ Vision/Projekt/OpenCV/build_opencv")
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
include_directories(include)
file(GLOB_RECURSE sources src/*.cpp include/*.hpp)
add_executable( OpenCV_Project ${sources} )
target_link_libraries( OpenCV_Project ${OpenCV_LIBS} )
